# gomoku-vlm

./: .gitignore  README.md  bot_ai.py  logic.toml  pyproject.toml  renderer.py  requirements.txt  sphinx.toml  sphinx_config.toml  sphinx_questions.toml  vision.toml
gen_dataset/: dataset_schema.py  game_simulator.py  runner.py
gen_dataset/sphinx/: __init__.py  core.py  debug_sample.py  perception.py  sphinx_config.json  strategy.py
paper/: main.typ  struc.typ  train.typ
perception_questions/: step_1.toml  step_2.toml
question_datasets/basic_visual_strategy_split/: strategy_questions.toml  visual_questions.toml
question_datasets/basic_visual_strategy_split_2/: strategy_questions.toml  visual_questions.toml
question_datasets/basic_visual_strategy_split_rehearsal_eval/: strategy_questions.toml  visual_questions.toml
question_datasets/basic_visual_strategy_split_rehearsal_train/: strategy_questions.toml
question_datasets/basic_visual_strategy_split_rein_eval/: strategy_questions.toml
question_datasets/basic_visual_strategy_split_rein_train/: strategy_questions.toml
question_datasets/basic_visual_strategy_split_train/: visual_questions.toml
question_datasets/curriculum_learning/: step_1.toml  step_2.toml  step_3.toml  step_4.toml
src/: ask.py  game.py  game_logic.py  gen_dataset.py  gomoku_renderer.py  hug.py  renderer.py  sim_game.py  train.py
src/bots/: ai_bot.py  minmax_bot.py  random_bot.py
src/eval/: __main__.py  logic.py
src/gen_dataset/: batch_runner.py  combine_parquets.py  dataset_schema.py  debug_sample.py  parquet_split_rewriter.py  runner.py
src/gobang/: game.py
src/train/: __main__.py  args.py  configs.py  setup.py  (+2 more)
(+51 files in other folders)
