[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku_vlm"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "Pillow",
    "torch",
    "pygame",
    "pandas",
    "pyarrow",
    "transformers",
    "torchvision","tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["*"] }
