[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku_vlm"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "Pillow",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pygame",
    "pandas",
    "pyarrow",
    "transformers",
    "tqdm",
    "torchvision",
    "trl",
    "peft"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["*"] }
